--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "socket.io": "^4.7.2",
     "terminal-kit": "^3.0.0"
   },
