--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devStart": "nodemon server.js"
   },
   "dependencies": {
+    "@replit/database": "^2.0.5",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
