--- a/package.json
+++ b/package.json
@@ -2,22 +2,15 @@
   "name": "chat-app",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "server.js",
   "scripts": {
     "devStart": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@replit/database": "^2.0.5",
-    "express": "^4.18.2",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "socket.io": "^4.7.2",
-    "terminal-kit": "^3.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
