--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
